# graphpowers

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-please.yml
bridge/: __init__.py  blast_radius.py  cli.py  context_pack.py  doctor.py  drift.py  explain.py  freshness.py  graphio.py  guard.py  lookup.py  narrate.py  pack_feedback.py  parallel.py  upstream.py
ci/: graphpowers-drift.yml  upstream-watch.yml
docs/: CI-ROLLOUT.md  DESIGN.md  INTEGRATION.md  UPSTREAM.md
hooks/: hooks.json  session-start
skills/architecture-drift-check/: SKILL.md
skills/catching-design-system-bypasses/: SKILL.md
skills/component-blast-radius/: SKILL.md
skills/graph-context-packs/: SKILL.md
skills/graph-first-brainstorming/: SKILL.md
skills/graph-first-debugging/: SKILL.md
skills/graph-first-planning/: SKILL.md
skills/graph-first-testing/: SKILL.md
skills/graph-impact-review/: SKILL.md
skills/keeping-the-graph-fresh/: SKILL.md
skills/using-graphpowers/: SKILL.md
tests/: run_tests.py  test_bridge.py
